@@ -24,10 +24,6 @@ void   gimp_transform_matrix_flip          (GimpMatrix3         *matrix,
                                             GimpOrientationType  flip_type,
                                             gdouble              axis);
 void   gimp_transform_matrix_flip_free     (GimpMatrix3         *matrix,
-                                            gint                 x,
-                                            gint                 y,
-                                            gint                 width,
-                                            gint                 height,
                                             gdouble              x1,
                                             gdouble              y1,
                                             gdouble              x2,
