@@ -136,7 +136,6 @@ drawable_transform_flip_invoker (GimpProcedure     *procedure,
           /* Assemble the transformation matrix */
           gimp_matrix3_identity (&matrix);
           gimp_transform_matrix_flip_free (&matrix,
-                                           x, y, width, height,
                                            x0, y0, x1, y1);
 
           if (progress)
@@ -208,7 +207,6 @@ drawable_transform_flip_default_invoker (GimpProcedure     *procedure,
           /* Assemble the transformation matrix */
           gimp_matrix3_identity (&matrix);
           gimp_transform_matrix_flip_free (&matrix,
-                                           x, y, width, height,
                                            x0, y0, x1, y1);
 
           if (interpolate)
